Update the README file.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ modules.json
 
 #build HTML directory
 build
+
+#Ignore the copy we make of khan-site.html
+lib/khan-exercises/exercises/khan-site.html
