--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/khan-exercises"]
-	path = lib/khan-exercises
-	url = git://github.com/Khan/khan-exercises.git
+[submodule "JSAV"]
+	path = JSAV
+	url = git://github.com/vkaravir/JSAV.git
