--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ modules.csv
 #build HTML directory
 build
 
+#RST build directory
+RST/build
+
 #Ignore the copy we make of khan-site.html
 lib/khan-exercises/exercises/khan-site.html
 
