Update to JSAV 0.4.3-53; update QBank, add draft of ka-jsav2.html exercise

--- a/.jshintrc
+++ b/.jshintrc
@@ -112,7 +112,8 @@
 
     "maxerr"        : 100,      // Maximum errors before stopping.
     "predef"        : [         // Extra globals.
-        "JSAV"
+        "JSAV", 
+        "Raphael"
     ],
     "indent"        : 2         // Specify indentation spacing
 }
