Changed Sally's template documentation into RST.

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ build
 
 #RST build directory
 RST/build
+RST/source/ToDo.rst
 
 #Ignore the copy we make of khan-site.html
 lib/khan-exercises/exercises/khan-site.html
