Adds chapnum directive. Similar to Sectnum but adds space character at the end of the prefix. Adds a postprocessor (-p) option to the preprocessor to modify index.html file to have the right numbering for subsection when chapnum is used.

--- a/RST/Makefile
+++ b/RST/Makefile
@@ -49,7 +49,8 @@ html:
 	python preprocessor.py source/ $(BUILDDIR)/html
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	cp source/knowledgemap.html $(BUILDDIR)/html
-	rm table.json 
+	rm table.json
+	python preprocessor.py -p   source/ build/html 
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
 
