Updating Makefile and .gitignore for new conf.py generator.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ build
 #RST build directory
 RST/build
 RST/source/ToDo.rst
+RST/source/conf.py
 
 #Ignore the copy we make of khan-site.html
 lib/khan-exercises/exercises/khan-site.html
