--- a/RST/Makefile
+++ b/RST/Makefile
@@ -16,7 +16,9 @@ I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) source
 
 .PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest gettext
 
-all: html
+all: 
+	-make clean
+	-make html
 
 help:
 	@echo "Please use \`make <target>' where <target> is one of"
