RST Makefile no longer automatically calls "clean". Quadratic sorts no longer include "TODO" requests for proficiency exercises.

--- a/RST/Makefile
+++ b/RST/Makefile
@@ -16,9 +16,7 @@ I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) source
 
 .PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest gettext
 
-all: 
-	-make clean
-	-make html
+all: html
 
 help:
 	@echo "Please use \`make <target>' where <target> is one of"
