Added .htaccess file to set expiration date of JS script to 12hrs. Modified Make file to copy .htaccess into the build directory.

--- a/RST/Makefile
+++ b/RST/Makefile
@@ -63,7 +63,7 @@ preprocessor:
 
 html: preprocessor makeconf
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
-	cp source/knowledgemap.html $(BUILDDIR)/html
+	cp ../lib/.htaccess $(BUILDDIR)/html
 	python preprocessor.py -p   source/ $(BUILDDIR)/html 
 	rm *.json
 	@echo
