Added a couple of hashing questions, updated Birthday calculator

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ build
 RST/build
 RST/source/ToDo.rst
 RST/source/conf.py
+Books
 
 #Ignore the copy we make of khan-site.html
 lib/khan-exercises/exercises/khan-site.html
