--- a/SourceCode/JavaScript/Makefile
+++ b/SourceCode/JavaScript/Makefile
@@ -1,8 +1,6 @@
-# Run the commandline compiler and runtime for all Processing code.
+# Run JavaScript code examples using node.js
 # This isn't quite running unit tests, but the effect should be similar.
 NODE = node
-SRC = c:\Cliff\OpenDSA\SourceCode\JavaScript
-BUILD = c:/Cliff/OpenDSA/SourceCode/JavaScript/build
 
 all: Sorting
 
@@ -12,13 +10,41 @@ clean:
 
 Demo: UpDown
 
-Sorting: Inssort
+Sorting: Inssort Bubblesort Selsort
 
+Sorttime: InssortTime BubblesortTime SelsortTime
 
 UpDown: Demo/UpDown.js
-	cp Demo/UpDown.js $(BUILD)
-	node $(BUILD)/UpDown.js
+	cp Demo/UpDown.js build
+	cd build; node UpDown.js
 
-Inssort: Sorting/SortTest.js Sorting/Swap.js Sorting/Insertionsort.js
-	cat Sorting/SortTest.js Sorting/Swap.js Sorting/Insertionsort.js > $(BUILD)/InssortTest.js
-	node $(BUILD)/InssortTest.js
+InssortTime: Utils/Strict.js Sorting/SortTime.js Utils/Swap.js Sorting/Insertionsort.js
+	cat Utils/Strict.js Utils/Swap.js Sorting/Insertionsort.js Sorting/SortTime.js> build/InssortTime.js
+	cd build; node InssortTime.js
+
+BubblesortTime: Utils/Strict.js Sorting/SortTime.js Utils/Swap.js Sorting/Bubblesort.js
+	cat Utils/Strict.js Utils/Swap.js Sorting/Bubblesort.js Sorting/SortTime.js> build/BubblesortTime.js
+	cd build; node BubblesortTime.js
+
+SelsortTime: Utils/Strict.js Sorting/SortTime.js Utils/Swap.js Sorting/Selectionsort.js
+	cat Utils/Strict.js Utils/Swap.js Sorting/Selectionsort.js Sorting/SortTime.js> build/SelsortTime.js
+	cd build; node SelsortTime.js
+
+
+Inssort: build/InssortTestSuccess
+
+build/InssortTestSuccess: utils/Strict.js Sorting/SortTest.js Utils/Swap.js Sorting/Insertionsort.js
+	cat utils/Strict.js Sorting/SortTest.js Utils/Swap.js Sorting/Insertionsort.js > build/InssortTest.js
+	cd build; node InssortTest.js
+
+Bubblesort: build/BubblesortTestSuccess
+
+build/BubblesortTestSuccess: Utils/Strict.js Sorting/SortTest.js Utils/Swap.js Sorting/Bubblesort.js
+	cat Utils/Strict.js Sorting/SortTest.js Utils/Swap.js Sorting/Bubblesort.js > build/BubblesortTest.js
+	cd build; node BubblesortTest.js
+
+Selsort: build/SelsortTestSuccess
+
+build/SelsortTestSuccess: Utils/Strict.js Sorting/SortTest.js Utils/Swap.js Sorting/selectionsort.js
+	cat Utils/Strict.js Sorting/SortTest.js Utils/Swap.js Sorting/Selectionsort.js > build/SelsortTest.js
+	cd build; node SelsortTest.js
